# firefox-ios

./: .cron.yml  .experimenter.yaml  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .narya.yaml  .periphery.yml  .pr_agent.toml  .swiftlint.yml  .taskcluster.yml  .travis.yml  AGENTS.md  AUTHORS  AutomateFirefoxBuild.command  BRANCH_NOTES.md  BUILDING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cartfile  Cartfile.b5  Cartfile.resolved  Cartfile.resolved.b5  Client-Bridging-Header.h  ClientTelemetry.swift  CryptoTests.swift  Dangerfile  Dangerfile.swift  DeferredTestUtils.swift  Demo-Contribution.  DynamicSwiftyJson-Info.plist  ExtensionUtils.swift  FirefoxTelemetryUtility.sh  FxAClientTests.swift  Gemfile  ISSUE_TEMPLATE.md  Jenkinsfile  Leanplum.json  MMA.md  (+75 more)
Carthage/Checkouts/SDWebImage/Vendors/libwebp/: .gitignore  .mailmap  AUTHORS  Android.mk  ChangeLog  Makefile.am  Makefile.vc  NEWS  PATENTS  README  README.mux  configure.ac  iosbuild.sh  makefile.unix
Carthage/Checkouts/application-services/: .buildconfig-android.yml  .cron.yml  .detekt.yml  .gitignore  .swiftlint.yml  .taskcluster.yml  CHANGELOG.md  CHANGES_UNRELEASED.md  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  Cartfile  Cartfile.resolved  DEPENDENCIES.md  LICENSE  README.md  build-carthage.sh  build.gradle  clippy.toml  gradle.properties  proguard-rules-consumer-jna.pro  publish.gradle  settings.gradle
Carthage/Checkouts/application-services/.circleci/: config.yml
Carthage/Checkouts/application-services/.github/: pull_request_template.md
Carthage/Checkouts/application-services/automation/: all_clippy_checks.sh  all_rust_tests.sh  all_tests.sh  cargo-update-pr.py  check_artifact_size.sh  check_megazord.sh  lint_bash_scripts.sh  prepare-release.py  run_ios_tests.sh  shared.py  upload_android_symbols.sh
Carthage/Checkouts/application-services/automation/symbols-generation/: dump_syms.manifest  requirements.txt  symbolstore.py  upload_symbols.py
Carthage/Checkouts/application-services/automation/taskcluster/: README.md  build_config.py  decision_task.py  decisionlib.py  mock.py
Carthage/Checkouts/application-services/build-scripts/: xc-universal-binary.sh
Carthage/Checkouts/application-services/components/fxa-client/: .gitignore  Cargo.toml  build.rs
Carthage/Checkouts/application-services/components/logins/: Cargo.toml  README.md  build.rs
Carthage/Checkouts/application-services/components/places/: Cargo.toml  README.md  build.rs
Carthage/Checkouts/application-services/components/push/: .gitignore  Cargo.toml  README.md  build.rs  prototype.md
Carthage/Checkouts/application-services/components/rc_log/: Cargo.toml
Carthage/Checkouts/application-services/components/remerge/: Cargo.toml  README.md  build.rs
Carthage/Checkouts/application-services/components/sync15/: Cargo.toml  README.md
Carthage/Checkouts/application-services/components/sync_manager/: Cargo.toml  README.md  build.rs
Carthage/Checkouts/application-services/components/tabs/: Cargo.toml  README.md  build.rs
Carthage/Checkouts/application-services/components/viaduct/: Cargo.toml  README.md  build.rs
Carthage/Checkouts/application-services/docs/: README.md  build-and-publish-pipeline.md  building.md  contributing.md  dependency-management.md  logging.md
Carthage/Checkouts/application-services/docs/design/: megazords.md  sync-manager.md
Carthage/Checkouts/application-services/docs/howtos/: building-a-rust-component.md  consuming-rust-components-on-android.md  consuming-rust-components-on-ios.md  cut-a-new-release.md  exposing-rust-components-to-kotlin.md  exposing-rust-components-to-swift.md  locally-published-components-in-fenix.md  locally-published-components-in-ios.md  passing-protobuf-data-over-ffi.md  setup-android-build-environment.md  testing-a-rust-component.md  when-to-use-what-in-the-ffi.md  working-with-reference-browser.md
Carthage/Checkouts/application-services/docs/metrics/: README.md
Carthage/Checkouts/application-services/docs/sync-storage-handbook/: .gitignore  book.toml
Carthage/Checkouts/application-services/docs/synconomicon/: book.toml
Carthage/Checkouts/application-services/libs/: .gitignore  README.md  android_defaults.sh  bootstrap-desktop.sh  build-all-android.sh  build-all-ios.sh  build-all.sh  build-nss-android.sh  build-nss-desktop.sh  build-nss-ios.sh  build-sqlcipher-android.sh  build-sqlcipher-desktop.sh  build-sqlcipher-ios.sh  cross-compile-macos-on-linux-desktop-libs.sh  macos-cc-tools.manifest  verify-android-environment.sh  verify-common.sh  verify-desktop-environment.sh  verify-ios-environment.sh
Carthage/Checkouts/application-services/megazords/full/: Cargo.toml  DEPENDENCIES.md  build.rs
Carthage/Checkouts/application-services/megazords/ios/: DEPENDENCIES.md  MozillaAppServices.h  README.md  SyncUnlockInfo.swift
Carthage/Checkouts/application-services/megazords/lockbox/: Cargo.toml  DEPENDENCIES.md
Carthage/Checkouts/application-services/testing/: err-if-symbol.sh
Carthage/Checkouts/application-services/testing/sync-test/: Cargo.toml  README.md
Carthage/Checkouts/application-services/tools/: dependency_summary.py  loc_summary.py  regenerate_dependency_summaries.sh  requirements.txt  sync_bugzilla_to_github.py
Carthage/Checkouts/application-services/website/: README.md  package-lock.json  package.json  sidebars.json  siteConfig.js
Carthage/Checkouts/application-services/website/blog/: 2018-03-08-fxa-primary-email.md  2018-04-18-fxa-train-109.md  2018-05-03-fxa-train-110.md  2018-05-15-fxa-train-111.md  2018-05-24-two-step-authentication-in-firefox-accounts.md  2018-06-04-fxa-train-112.md  2018-06-20-fxa-train-113.md  2018-07-11-android-component.md  2018-08-02-fxa-train-116.md  2018-08-02-fxa-train-117.md  2018-09-14-train-119.md  (+6 more)
Carthage/Checkouts/application-services/xcconfig/: common.xcconfig
firefox-ios/firefox-ios-tests/Tests/ExperimentIntegrationTests/: Pipfile  conftest.py  generate_smoke_tests.py  get_specific_device_udid.py  pyproject.toml  pytest.ini  test_generic.py  test_messaging.py  tests.md  variables.yaml  xcodebuild.py  xcrun.py
(+29738 files in other folders)
