[package]
name = "rc_log_ffi"
version = "0.1.0"
edition = "2018"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
license = "MPL-2.0"

[lib]
name = "rc_log_ffi"
crate-type = ["lib"]

[features]
default = []
# Required for gradle in robolectric
force_android = []

[dependencies]
log = "0.4.8"
ffi-support = { path = "../support/ffi" }
lazy_static = "1.4.0"
cfg-if = "0.1.9"
