[package]
name = "sync15"
edition = "2018"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
license = "MPL-2.0"

[features]
reqwest = ["viaduct/reqwest"]
default = []

[dependencies]
base64 = "0.11.0"
ffi-support = { path = "../support/ffi" }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
url = "2.1.1"
log = "0.4"
lazy_static = "1.4"
base16 = "0.2.1"
failure = "0.1.6"
rc_crypto = { path = "../support/rc_crypto", features = ["hawk"] }
viaduct = { path = "../viaduct" }
interrupt = { path = "../support/interrupt" }
error-support = { path = "../support/error" }
sync-guid = { path = "../support/guid", features = ["rusqlite_support", "random"] }
sync15-traits = {path = "../support/sync15-traits"}
