[package]
name = "sync_manager"
version = "0.1.0"
authors = ["application-services <application-services@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
sync15 = { path = "../sync15" }
places = { path = "../places" }
logins = { path = "../logins" }
tabs = { path = "../tabs" }
ffi-support = { path = "../support/ffi" }
failure = "0.1.6"
error-support = { path = "../support/error" }
prost = "0.6.1"
prost-derive = "0.6.1"
lazy_static = "1.4.0"
log = "0.4.8"
sql-support = { path = "../support/sql" }
url = "2.1.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
interrupt = { path = "../support/interrupt" }

[build-dependencies]
prost-build = "0.6.1"
