[package]
name = "lockbox"
edition = "2018"
version = "0.1.0"
authors = ["application-services <application-services@mozilla.com>"]
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fxaclient_ffi = { path = "../../components/fxa-client/ffi" }
logins_ffi = { path = "../../components/logins/ffi" }
rc_log_ffi = { path = "../../components/rc_log" }
viaduct = { path = "../../components/viaduct", default-features = false }
