[package]
name = "cli-support"
edition = "2018"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>", "Mark Hammond <mhammond@mozilla.com>"]
license = "MPL-2.0"

[dependencies]
failure = "0.1.6"
fxa-client = { path = "../../fxa-client" }
log = "0.4.8"
sync15 = { path = "../../sync15" }
url = "2.1.1"
webbrowser = "0.5.1"
